--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/* h1 => SElector
+color =>property
+red => value */
+h1 {
+  color: red;
+  font-size: 60px;
+}
+
 p {
-  font-size: xx-large;
+  color: blue;
+  font-size: 18px;
 }
