--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 /* h1 => SElector
 color =>property
 red => value */
+
+* {
+  margin: 0;
+  color: wheat;
+}
 h1 {
   color: red;
   font-size: 60px;
@@ -9,4 +14,29 @@ h1 {
 p {
   color: blue;
   font-size: 18px;
+}
+
+div {
+  width: 200px;
+  height: 200px;
+  background: aqua;
+  margin-bottom: 20px;
+}
+
+div p {
+  color: black;
+}
+
+.text-bk {
+  color: red;
+}
+
+.first-div {
+  background: blue;
+}
+.first-div p {
+  color: white;
+}
+#big-div {
+  width: 400px;
 }
