--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,11 @@
-/* h1 => SElector
-color =>property
-red => value */
-
-* {
-  margin: 0;
-  color: wheat;
+body {
+  background: url("./bg.jpeg") no-repeat;
+  background-size: cover;
 }
-h1 {
-  color: red;
-  font-size: 60px;
-}
-
 p {
-  color: blue;
-  font-size: 18px;
-}
-
-div {
-  width: 200px;
-  height: 200px;
-  background: aqua;
-  margin-bottom: 20px;
-}
-
-div p {
-  color: black;
-}
-
-.text-bk {
-  color: red;
-}
-
-.first-div {
-  background: blue;
-}
-.first-div p {
-  color: white;
-}
-#big-div {
-  width: 400px;
+  color: aqua;
+  color: #000000;
+  color: #0000ff;
+  color: #00ff00;
+  color: #d4b60d;
 }
