--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 body {
   background: url("./bg.jpeg") no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
-p {
-  color: aqua;
-  color: #000000;
-  color: #0000ff;
-  color: #00ff00;
-  color: #d4b60d;
+
+div {
+  background-color: rgba(240, 128, 128, 0.7);
+  background-image: url("./jeff\ cover.jpeg");
+  background-repeat: no-repeat;
+  color: white;
+  background-position: top center;
+  /* shorthand */
+  background: #f78fb3 url(jeff\ cover.jpeg) no-repeat top center;
 }
