--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,9 @@
-body {
-  background: url("./bg.jpeg") no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-div {
-  background-color: rgba(240, 128, 128, 0.7);
-  background-image: url("./jeff\ cover.jpeg");
-  background-repeat: no-repeat;
-  color: white;
-  background-position: top center;
-  /* shorthand */
-  background: #f78fb3 url(jeff\ cover.jpeg) no-repeat top center;
+h1 {
+  border-style: inset;
+  border-width: 10px;
+  border-color: aquamarine;
+  border: 10px solid blue;
+  border-radius: 5px;
+  border-left: 5px solid gray;
+  border-left-style: dotted;
 }
