--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
+html,
+body {
+  height: 100%;
+}
 div {
   background: #5749;
-  width: 300px;
-  height: 300px;
+  width: 92%;
   margin-top: 50px;
   padding-top: 50px;
   margin: 10px auto;
-  padding: 20px;
+  padding: 2%;
+  max-width: 1140px;
+  min-width: 500px;
+  height: 100%;
+  max-height: 600px;
 }
