--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
 }
-div {
+/* div {
   background: #5749;
   width: 92%;
   margin-top: 50px;
@@ -13,4 +13,14 @@ div {
   min-width: 500px;
   height: 100%;
   max-height: 600px;
+} */
+
+.parent {
+  background: #54b9;
+  color: #fff;
+  width: 24%;
+  margin: 1%;
+  padding: 2%;
+  border: 0.5em solid tomato;
+  float: left;
 }
