css text formatting

--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,24 @@ html,
 body {
   height: 100%;
 }
-/* div {
-  background: #5749;
-  width: 92%;
-  margin-top: 50px;
-  padding-top: 50px;
-  margin: 10px auto;
-  padding: 2%;
-  max-width: 1140px;
-  min-width: 500px;
-  height: 100%;
-  max-height: 600px;
-} */
+h1 {
+  color: #ff8922;
+  /* background: blue; */
+  text-align: center;
+}
 
-.parent {
-  background: #54b9;
-  color: #fff;
-  width: 24%;
-  margin: 1%;
-  padding: 2%;
-  border: 0.5em solid tomato;
-  float: left;
+p {
+  text-align-last: center;
+}
+.one {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+.text-top {
+  vertical-align: text-top;
+}
+.text-bottom {
+  vertical-align: text-bottom;
+  text-transform: capitalize;
+  text-decoration: overline underline;
 }
