--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,15 @@ body {
   height: 100%;
 }
 h1 {
-  color: #ff8922;
-  /* background: blue; */
-  text-align: center;
+  font-family: serif;
+  font-family: sans-serif;
+  font-family: monospace;
+  font-family: cursive;
+  font-family: fantasy;
+  /* custom fonts */
+  font-family: "Lato", sans-serif;
 }
-
-p {
-  text-align-last: center;
-}
-.one {
-  direction: rtl;
-  unicode-bidi: bidi-override;
-}
-.text-top {
-  vertical-align: text-top;
-}
-.text-bottom {
-  vertical-align: text-bottom;
-  text-transform: capitalize;
-  text-decoration: overline underline;
+h3 {
+  font-size: 50px;
+  font-variant: small-caps;
 }
