--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,33 @@ html,
 body {
   height: 100%;
 }
-h1 {
-  font-family: serif;
-  font-family: sans-serif;
-  font-family: monospace;
-  font-family: cursive;
-  font-family: fantasy;
-  /* custom fonts */
-  font-family: "Lato", sans-serif;
+a {
+  color: black;
+  text-decoration: none;
 }
-h3 {
-  font-size: 50px;
-  font-variant: small-caps;
+a:visited {
+  color: brown;
 }
-i {
+a:hover {
+  color: aquamarine;
+}
+a:active {
+  color: blue;
+  font-weight: bold;
+}
+a:focus {
+  color: blueviolet;
+}
+a.btn {
+  text-decoration: none;
+  background: red;
+  border: 2px solid #000;
+  border-radius: 10px;
   color: #fff;
-  background-color: rgb(189, 167, 94);
+  padding: 10px 20px;
+  display: inline-block;
+}
+
+a.btn:hover {
+  background: rgba(255, 0, 0, 0.2);
 }
