--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
-ul {
-  list-style-type: disc;
-  list-style-type: circle;
+table,
+th,
+td {
+  border: 1px solid tomato;
+  border-collapse: collapse;
+  padding: 5px 10px;
+}
+
+table {
+  width: 100%;
 }
