--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-table,
-th,
-td {
-  border: 1px solid tomato;
-  border-collapse: collapse;
-  padding: 5px 10px;
+h1 {
+  background: tomato;
 }
 
-table {
-  width: 100%;
+h1 {
+  display: inline-block;
+}
+h1 {
+  display: none;
 }
