--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,28 @@
-h1 {
-  background: tomato;
+body {
+  margin: 0;
 }
-
-h1 {
-  display: inline-block;
+div {
+  background: aqua;
+  width: 400px;
+  height: 400px;
+  margin: 0;
+  margin-left: 20px;
+  margin-right: 20px;
 }
-h1 {
-  display: none;
+.main {
+  position: relative;
+  top: 50px;
+  left: 30px;
+}
+.sec {
+  background: blueviolet;
+}
+.child {
+  background: red;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  left: auto;
+  bottom: 0;
 }
