--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,52 @@
 body {
+  font-family: "Poppins" sans-serif;
   margin: 0;
 }
-div {
-  background: aqua;
-  width: 400px;
-  height: 400px;
-  margin: 0;
-  margin-left: 20px;
-  margin-right: 20px;
+#main_menu {
+  background: #1b1464;
 }
-.main {
+#main_menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+#main_menu li {
+  display: inline-block;
   position: relative;
-  top: 50px;
-  left: 30px;
 }
-.sec {
-  background: blueviolet;
+#main_menu li a {
+  display: block;
+  padding: 12px 15px;
+  color: #fff;
+  text-decoration: none;
 }
-.child {
-  background: red;
-  width: 50px;
-  height: 50px;
+#main_menu li a:hover {
+  background: #0652dd;
+}
+/* Dropdown menu style */
+#main_menu ul ul {
   position: absolute;
-  top: 0;
-  left: auto;
-  bottom: 0;
+  left: 0;
+  top: 47px;
+  background: #5758bb;
+  width: 200px;
+  display: none;
+  z-index: 999;
+}
+#main_menu ul ul li {
+  display: block;
+}
+#main_menu ul li:hover ul {
+  display: block;
+}
+#main_menu ul li:hover a {
+  background: #0652dd;
+}
+#main_menu ul li:hover li a {
+  background: #5758bb;
+}
+#main_menu ul ul li a:hover {
+  display: block;
+  background: #192a56;
 }
