--- a/facebook/styles.css
+++ b/facebook/styles.css
@@ -13,7 +13,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
+  height: 700px;
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -103,4 +104,35 @@ body {
 }
 .create-page:hover {
   text-decoration: underline;
+}
+.container {
+  width: 980px;
+  padding: 20px;
+  margin: 0 auto;
+}
+#footer_area {
+  background: #fff;
+  padding: 25px 0;
+}
+#footer_area ul {
+  text-align: left;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ddd;
+}
+#footer_area ul li {
+  display: inline-block;
+  margin: 0 5px;
+}
+#footer_area ul li a {
+  color: #737373;
+  font-size: 14px;
+  text-decoration: none;
+}
+#footer_area ul li a:hover {
+  text-decoration: underline;
+}
+#footer_area p {
+  color: #737373;
+  font-size: 11px;
 }
